# metor

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
apps/elodin/: Cargo.toml  README.md  install-editor.sh
apps/elodin/src/cli/: editor.rs  mod.rs
apps/elodin/wix/: main.wxs
apps/metor/: Cargo.toml  README.md
apps/metor/src/: main.rs
apps/metor/src/cli/: editor.rs  mod.rs
docs/internal/: nix.md  release.md
docs/public/: README.md  config.toml
docs/public/content/: _index.md
docs/public/content/ES01/: _index.md
docs/public/content/home/: 3-body.md  _index.md  bouncing-ball.md  quickstart.md
docs/public/content/home/aleph/: betaflight.md  fc_board_flash.md  reset.md  setup.md
docs/public/content/home/db/: _index.md  architecture.md  overview.md
docs/public/content/home/tao/: _index.md  ecs.md  introduction.md  jax-nox.md  monte-carlo.md
docs/public/content/reference/: coords.md  elodin-cli.md  overview.md  python-api.md  replays.md
docs/public/content/releases/: _index.md  changelog.md
docs/public/static/: site.webmanifest
docs/public/templates/macros/: header.html
examples/ball/: plot.py  sim.py
examples/cube-sat/: Cargo.toml
examples/cube-sat/src/: main.rs  schematic.kdl
examples/drone/: README.md  config.py  control.py  main.py  mekf.py  motors.py  pyproject.toml  sensors.py  sim.py  telemetry.py  test_util.py  util.py
fsw/aleph-status/: Cargo.toml
fsw/aleph-status/src/: main.rs
fsw/blackbox/: Cargo.toml
fsw/blackbox/src/: lib.rs
fsw/gstreamer/: Cargo.toml  README.md  build.rs
fsw/gstreamer/src/: lib.rs
fsw/mekf/src/: main.rs
fsw/sensor-fw/src/: usb_serial.rs
fsw/serial-bridge/: Cargo.toml
fsw/serial-bridge/src/: main.rs
fsw/tegrastats-bridge/: Cargo.toml
fsw/tegrastats-bridge/src/: main.rs
fsw/video-streamer/: Cargo.toml  README.md
fsw/video-streamer/src/: main.rs
images/aleph/: README.md  flake.nix  justfile
images/aleph/kernel/: default.nix
images/aleph/modules/: aleph-base.nix  aleph-dev.nix  elodin-db.nix  mekf.nix  tegrastats-bridge.nix
images/aleph/pkgs/: elodinsink.nix
images/aleph/template/: flake.nix
kubernetes/: README.md
kubernetes/base/: kustomization.yaml
kubernetes/base/elodin-app/: ingress.yaml  kustomization.yaml  namespace.yaml
kubernetes/base/elodin-app/elo-docs/: deployment.yaml  kustomization.yaml
kubernetes/overlays/dev/: kustomization.yaml
kubernetes/overlays/dev-branch/: kustomization.yaml
kubernetes/overlays/prod/: kustomization.yaml
libs/db/: Cargo.toml  README.md  install-db.sh
libs/db/cli/: Cargo.toml
libs/db/cli/src/: lib.rs
libs/db/eql/: Cargo.toml
libs/db/eql/src/: lib.rs
libs/db/src/: append_log.rs  arc_ring.rs  axum.rs  control.rs  disruptor.rs  error.rs  lib.rs  main.rs  msg_log.rs  msg_log_2.rs  registry.rs  time_series.rs  time_series_2.rs  vtable_stream.rs
libs/db/src/arrow/: mod.rs
libs/db/tests/: Cargo.toml
libs/db/tests/src/: lib.rs
libs/elodin-editor/: Cargo.toml
libs/elodin-editor/src/: lib.rs
libs/elodin-editor/src/ui/: images.rs  startup_window.rs
libs/elodin-editor/src/ui/command_palette/: palette_items.rs
libs/elodin-editor/src/ui/plot/: data.rs
libs/impeller2/: Cargo.toml
libs/impeller2/bbq/: Cargo.toml
libs/impeller2/bevy/: Cargo.toml
libs/impeller2/bevy/src/: lib.rs
libs/impeller2/kdl/src/: de.rs  ser.rs
libs/impeller2/src/: component.rs  types.rs  vtable.rs
libs/impeller2/stellar/: Cargo.toml
libs/impeller2/stellar/src/: queue.rs
libs/impeller2/wkt/src/: gui.rs  lib.rs  metadata.rs  msgs.rs  path.rs  value.rs
libs/metor-fsw/: Cargo.toml
libs/metor-fsw/adcs/: Cargo.toml
libs/metor-fsw/adcs/reference-impls/: mekf.py
libs/metor-fsw/adcs/src/: mekf.rs  yang_lqr.rs
libs/metor-fsw/examples/: msg-test.rs
libs/metor-fsw/macros/: Cargo.toml
libs/metor-fsw/macros/src/: as_vtable.rs  componentize.rs  decomponentize.rs  lib.rs  metadatatize.rs
libs/metor-fsw/src/: lib.rs  metadata.rs  nox.rs  update.rs
libs/metor-proto/: Cargo.toml
libs/metor-proto/bbq/: Cargo.toml
libs/metor-proto/bbq/src/: lib.rs
libs/metor-proto/bevy/: Cargo.toml
libs/metor-proto/bevy/src/: lib.rs  tcp.rs
libs/metor-proto/frame/: Cargo.toml
libs/metor-proto/frame/src/: lib.rs
libs/metor-proto/kdl/: Cargo.toml
libs/metor-proto/kdl/src/: de.rs  lib.rs  ser.rs
libs/metor-proto/src/: component.rs  error.rs  vtable.rs
libs/metor-proto/stellar/: Cargo.toml
libs/metor-proto/stellar/src/: lib.rs  queue.rs  tests.rs
libs/metor-proto/wkt/: Cargo.toml
libs/metor-proto/wkt/src/: gui.rs  lib.rs  metadata.rs  msgs.rs  path.rs  value.rs
libs/metor-ui/: Cargo.toml
libs/metor-ui/src/: lib.rs  object_3d.rs  offset_parse.rs  run.rs
libs/metor-ui/src/plugins/: asset_cache.rs  navigation_gizmo.rs
libs/metor-ui/src/ui/: actions.rs  colors.rs  dashboard.rs  hierarchy.rs  images.rs  map.rs  mod.rs  modal.rs  monitor.rs  query_plot.rs  query_table.rs  startup_window.rs  status_bar.rs  tiles.rs  video_stream.rs  widgets.rs
libs/metor-ui/src/ui/command_palette/: palette_items.rs
libs/metor-ui/src/ui/inspector/: dashboard.rs  entity.rs  graph.rs  map.rs  mod.rs  object3d.rs  (+2 more)
libs/nox/: Cargo.toml
libs/nox-ecs/src/: impeller2_server.rs
libs/nox-py/examples/: cube-sat.py  three-body.py
libs/nox-py/src/: exec.rs
libs/nox/src/: error.rs  fields.rs  integrators.rs  lib.rs  matrix.rs  quaternion.rs  scalar.rs  six_dof.rs  spatial.rs  tensor.rs  vector.rs
libs/nox/src/array/: dynamic.rs  mod.rs
libs/roci/: Cargo.toml
libs/roci/adcs/: Cargo.toml
libs/roci/adcs/src/: mekf.rs  yang_lqr.rs
libs/roci/examples/: msg-test.rs
libs/roci/macros/: Cargo.toml
libs/roci/macros/src/: as_vtable.rs  componentize.rs  decomponentize.rs  lib.rs  metadatatize.rs
libs/roci/src/: lib.rs  metadata.rs  nox.rs  path.rs  tcp.rs  update.rs  vtable.rs
libs/s10/: Cargo.toml
libs/s10/src/: main.rs  recipe.rs
libs/stellarator/maitake/src/: scheduler.rs
libs/stellarator/src/: lib.rs
libs/stellarator/src/poll/: mod.rs
nix/: shell.nix
nix/modules/: docs.nix
nix/pkgs/: elodin-cli.nix  elodin-py.nix
(+12 files in other folders)
