[workspace]
resolver = "2"
members = [
    "libs/metor-ui",
    "libs/nox",
    "libs/nox-frames",
    "apps/metor",
    "libs/roci",
    "libs/roci/macros",
    "libs/roci/adcs",
    "libs/wmm",
    "libs/metor-proto",
    "libs/metor-proto/stellar",
    "libs/metor-proto/bevy",
    "libs/metor-proto/wkt",
    "libs/metor-proto/bbq",
    "libs/metor-proto/frame",
    "libs/db",
    "libs/db/cli",
    "libs/db/tests",
    "libs/stellarator",
    "libs/stellarator/buf",
    "libs/stellarator/macros",
    "libs/stellarator/maitake",
    "libs/stellarator/maitake/util",
    "libs/video-toolbox",
    "libs/postcard-c/codegen",
    "apps/inscriber",
    "fsw/video-streamer",
    "fsw/gstreamer",
    "libs/db/eql",
    "libs/metor-proto/kdl",
    "examples/cube-sat"
]
exclude = ["fsw/sensor-fw", "fsw/blackbox", "docs/memserve"]

[workspace.package]
version = "0.14.2"
edition = "2024"
repository = "https://github.com/metor-io/metor"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.macos-release]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
roci-macros.path = "libs/roci/macros"
roci.path = "libs/roci"
roci.default-features = false
roci-adcs.path = "libs/roci/adcs"
nox.path = "libs/nox"
nox.default-features = false
nox-frames.path = "libs/nox-frames"
wmm.path = "libs/wmm"

[profile.release-with-debug]
inherits = "release"
debug = true
