[package]
name = "metor"
license = "MIT OR Apache-2.0"
version.workspace = true
repository.workspace = true
edition = "2024"
authors = ["sascha@metor.io"]

[dependencies]
thiserror = "2.0"
miette.version = "7.2"
miette.features = ["fancy"]
clap = { version = "4.4.18", features = ["derive"] }

# serialization
serde = { version = "1.0.196", features = ["derive"] }
toml.version = "0.8"
postcard = "1"

stellarator.path = "../../libs/stellarator"
directories = "5.0.1"
bevy.version = "0.16"
tracing-subscriber = { version = "0.3", features = ["chrono"] }

metor-ui.path = "../../libs/metor-ui"
metor-ui.default-features = false
metor-proto-bevy.path = "../../libs/metor-proto/bevy"

[build-dependencies]
anyhow = "1.0.79"
ignore = "0.4"
tar = "0.4.40"
zstd = "0.13.0"
