[package]
name = "cube-sat"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
# async
stellarator.path = "../../libs/stellarator"
stellarator.features = ["miette"]
metor-proto-stellar.path = "../../libs/metor-proto/stellar"

# ser-de
metor-proto.path = "../../libs/metor-proto"
metor-proto.features = ["std"]
metor-proto-wkt.path = "../../libs/metor-proto/wkt"
metor-proto-wkt.features = ["gui", "std"]
metor-proto-bbq.path = "../../libs/metor-proto/bbq"
zerocopy.version = "0.8.2"
roci.path = "../../libs/roci"
roci-adcs.path = "../../libs/roci/adcs"

anyhow = "1"

# math
nox.path = "../../libs/nox"

# rand
fastrand = "2.2.0"

# config
clap.version = "4.4.18"
clap.features = ["derive"]

# db
metor-db.path = "../../libs/db"
tracing-subscriber = { version = "0.3", features = ["chrono"] }

# rand
rand = "0.9"
rand_distr = "0.5"
