[package]
name = "blackbox"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[features]
metor-fsw = ["dep:metor-fsw", "std"]
std = ["metor-fsw/std"]

[dependencies]
zerocopy = { version = "0.8.13", features = ["derive"] }
metor-fsw = { path = "../../libs/metor-fsw", default-features = false, optional = true }
