[package]
name = "aleph-serial-bridge"
license = "MIT OR Apache-2.0"
edition = "2024"
version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"

# async
stellarator.path = "../../libs/stellarator"
stellarator.features = ["miette"]
metor-proto-stellar.path = "../../libs/metor-proto/stellar"
futures-lite = "2.5.0"

# ser-de
metor-proto.path = "../../libs/metor-proto"
metor-proto.features = ["std"]
metor-proto-wkt.path = "../../libs/metor-proto/wkt"
metor-proto-wkt.features = ["std"]
metor-proto-frame.path = "../../libs/metor-proto/frame"
cobs = "0.2"
zerocopy.version = "0.8.2"
metor-fsw.path = "../../libs/metor-fsw"
serde.version = "1.0"
serde.features = ["derive"]
postcard-schema.version = "0.2"
postcard-schema.features = ["derive"]
blackbox.path = "../../fsw/blackbox"
blackbox.features = ["metor-fsw"]

# rand
fastrand = "2.2.0"
