[package]
name = "tegrastats-bridge"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
# async
stellarator.path = "../../libs/stellarator"
stellarator.features = ["miette"]
metor-proto-stellar.path = "../../libs/metor-proto/stellar"
futures-concurrency = "7.6"

# ser-de
metor-proto.path = "../../libs/metor-proto"
metor-proto.features = ["std"]
metor-proto-wkt.path = "../../libs/metor-proto/wkt"
metor-proto-wkt.features = ["gui", "std"]
zerocopy.version = "0.8.2"
roci.path = "../../libs/roci"

# errors
anyhow = "1"

# rand
fastrand = "2.2.0"

# os
sysinfo = "0.34"
