[package]
name = "video-streamer"
version = "0.1.0"
edition = "2024"
description = "Streams video files to metor-db after re-encoding to AV1"
publish = false

[dependencies]
ffmpeg-next.version = "7.1.0"
metor-proto = { path = "../../libs/metor-proto" }
metor-proto-stellar = { path = "../../libs/metor-proto/stellar" }
metor-proto-wkt = { path = "../../libs/metor-proto/wkt" }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
miette = { version = "5.10", features = ["fancy"] }
anyhow = "1.0"
postcard = "1.0"
stellarator.path = "../../libs/stellarator"
byteorder = "1.5"
bytes = "1.5"

kdam.version = "0.6.2"
kdam.features = ["gradient", "template", "unicode"]
