[package]
name = "nox"
license = "MIT OR Apache-2.0"
version.workspace = true
edition = "2024"
description = "Tensor library that compiles to XLA (like JAX, but for Rust)."
repository = "https://github.com/elodin-sys/elodin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["thiserror/std", "faer/std", "num-traits/std", "nox-array/std"]
shared = []
serde = ["dep:serde", "smallvec/serde"]

[dependencies]
typenum = "1.17.0"
num-traits = { version = "0.2.15", default-features = false }
thiserror = { version = "2.0", default-features = false }
seq-macro = "0.3.5"
fn-traits = "0.2"
faer = { version = "0.20", default-features = false, features = ["cholesky", "lu"] }
libm = "0.2.8"
inplace_it = "0.3.6"
smallvec.version = "1.11.2"
smallvec.features = ["const_generics", "union"]
nox-array.path = "./array"

zerocopy.version = "0.8.2"
zerocopy.features = ["derive"]

# debug
approx = "0.5"

# serialize
serde.version = "1"
serde.optional = true
