[package]
name = "eql"
version = "0.1.0"
edition = "2024"

[dependencies]
# parse
peg = "0.8.5"
unicode-ident = "1.0.18"
convert_case = "0.8"

# data-structures
smallvec = "1.15"
metor-proto.path = "../../metor-proto"
metor-proto-wkt.path = "../../metor-proto/wkt"

# errors
thiserror = "1"

# time
hifitime = "4"
jiff = "0.2"
