[package]
name = "metor-db-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
metor-db = { path = ".." }
stellarator = { path = "../../stellarator" }
metor-proto = { path = "../../metor-proto" }
metor-proto-wkt = { path = "../../metor-proto/wkt" }
metor-proto-stellar = { path = "../../metor-proto/stellar" }
nox = { path = "../../nox" }
fastrand = "2.2.0"
futures-lite = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
miette = { version = "7.2", features = ["fancy"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
zerocopy = "0.8"
arrow.version = "55"
postcard-schema = "0.2"
postcard = "1"
