[package]
name = "metor-proto-bevy"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[features]
default = ["tcp"]
tcp = ["stellarator", "metor-proto-stellar"]

[dependencies]
metor-proto.path = ".."
metor-proto.features = ["bevy", "std", "thingbuf"]
metor-proto-wkt.path = "../wkt"
metor-proto-wkt.features = ["gui", "bevy"]
nox.path = "../../nox"

# bevy
bevy.version = "0.16"
bevy.default-features = false

# channels
thingbuf = "0.1.6"
metor-proto-bbq.path = "../bbq"
bbq2.git = "https://github.com/elodin-sys/bbq2.git"
bbq2.rev = "b6e36706a5549d770ebf2dc122b39cef1368b06d"
bbq2.features = ["std", "maitake-sync-0_2"]
bbq2.default-features = false
stellarator-buf.path = "../../stellarator/buf"

# async
stellarator.path = "../../stellarator"
stellarator.optional = true
stellarator.features = ["miette"]
metor-proto-stellar.path = "../stellar"
metor-proto-stellar.features = ["queue"]
metor-proto-stellar.optional = true
futures-lite = "2.5.0"

# helpers
smallvec.version = "1.11.2"
compact_str = "0.9"

# error
miette.version = "7.2"
miette.features = ["fancy-no-syscall"]

# rand
fastrand = "2.2"

# serde
serde.version = "1.0"
postcard.version = "1.0.8"
postcard.features = ["alloc"]
