[package]
name = "roci-adcs"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nox.path = "../../nox"
nox.default-features = false
roci.path = ".."
zerocopy.version = "0.8"
zerocopy.features = ["derive"]

[dev-dependencies]
approx = "0.5"
